--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker" rel="stylesheet" />
+    <title>store recording</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/0d4636625f.js" crossorigin="anonymous"></script>
   </body>
 </html>
